# LineLaser

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  linelidar  main.cpp  result_video.avi
src/: line.cpp  line.h
